# djangoGPT-3.5

./: db.sqlite3  manage.py  pyproject.toml
core/: models.py  serializers.py  utils.py  views.py
core/migrations/: 0001_initial.py
core/templates/: index.html
gpt3/: asgi.py  settings.py  urls.py  wsgi.py
